--- a/packages/verifier/.env
+++ b/packages/verifier/.env
@@ -4,9 +4,7 @@
 
 # By default, if there is a variable in .env file which collides with one that already exists in your environment,
 
-# then that variable will be skipped. This means, during deployment, the environment variables in deploy/helm folder
-
-# will take precedence.
+# then that variable will be skipped.
 
 # Debug settings.
 
@@ -20,8 +18,8 @@ DEBUG="prisma:\*"
 
 DB_HOST=localhost
 DB_USER=verifier
-DB_PASSWORD=T3ndren!!
-PI_RO_PASSWORD=T3ndren!!
+DB_PASSWORD=TestPassWord!!
+PI_RO_PASSWORD=TestPassWord!!
 DB_DATABASE=verifier
 DB_SCHEMA=verifier
 DATABASE_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:5432/${DB_DATABASE}?schema=${DB_SCHEMA}"
@@ -37,7 +35,7 @@ PORT="3000"
 
 NODE_ENV="development"
 ENV="dev"
-SERVICE_NAME="verity-verifier"
+SERVICE_NAME="verifier"
 AWS_REGION="us-east-1"
 APP_TEAM="platform"
 
