--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "./packages/*"
   ],
   "devDependencies": {
-    "@types/secp256k1": "^4.0.4"
+    "@types/secp256k1": "^4.0.6"
+  },
+  "overrides": {
+    "neon-cli": "1.0.0"
   }
 }
