--- a/.licenseignore
+++ b/.licenseignore
@@ -1,13 +1,13 @@
-pkg:npm/borsh
-@bcoe/v8-coverage
-did-jwt-vc
-language-subtag-registry
-multiformats
-pako
-sha.js
-sprintf-js
-ethereum-dapp
-solana-dapp
-ethereum
-iniparser
-hardhat
+pkg:npm/borsh@^0.2.2
+pkg:npm/@bcoe/v8-coverage@^0.2.3
+pkg:npm/did-jwt-vc@^4.0.4
+pkg:npm/language-subtag-registry@~0.3.2
+pkg:npm/multiformats@^9.4.10
+pkg:npm/pako@^2.0.3
+pkg:npm/sha.js@^2.4.0
+pkg:npm/sprintf-js@~1.0.2
+pkg:npm/ethereum-dapp
+pkg:npm/solana-dapp
+pkg:npm/ethereum
+pkg:npm/iniparser@~1.0.5
+pkg:npm/hardhat@^2.0.0
